--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,6 +5,5 @@ authors: []
 depend: []
 description:
 commands:
-  something:
-    description:
-    aliases: []
+  testpacket:
+    description: Test command
